added sem6.hw